--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               hassle-free market entry.
             </p>
             <a href="#about" class="btn btn-outline-warning mt-4 animate__animated animate__fadeInUp ReameBtn" style="color: white; border: solid #02AAFF;">
-              No More
+              Know More
             </a>
           </div>
           <!-- Right Column: Image -->
