--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
       </div>
       <div class="container">
         <div class="copyright">
-          <span>Copyright</span> <strong class="px-1 sitename">Certoyd</strong> <span>L.L.C All Rights Reserved 2025</span>
+          <span>2025 Certoyd L.L.C, All Rights Reserved</span>
         </div>
       </div>
     </div>
